[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MqttLibPy"
version = "1.2.0"
authors = [
  { name="juan pablo allende - xmarts", email="juan.allende@xmarts.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xmarts/mqtt-common"
"Bug Tracker" = "https://github.com/xmarts/mqtt-common/issues"